@@ -1,3 +1,7 @@
+2000-08-24  Tim Jenness  <timj@jach.hawaii.edu>
+
+	* General.pm: Fix max() and min() with 0
+
 2000-08-15  Tim Jenness  <timj@jach.hawaii.edu>
 
 	* Basic.pm (orac_add_code_to_recipe): Check that ORAC_STATUS is in
